[gd_scene load_steps=10 format=3 uid="uid://ol3fy5wrdj7k"]

[ext_resource type="Texture2D" uid="uid://crpqg4fvwqnmc" path="res://Images/shuttlecock.png" id="1_ih47p"]
[ext_resource type="Script" path="res://main.gd" id="1_pbe4o"]
[ext_resource type="Script" path="res://Shuttlecock.gd" id="1_r2444"]
[ext_resource type="Script" path="res://PlayerBat.gd" id="3_xxkw2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n77np"]
rough = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h8rm"]
size = Vector2(39.8621, 40)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cwllb"]
rough = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4teu5"]
rough = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0j56d"]
size = Vector2(20, 122.067)

[node name="main" type="Node2D"]
script = ExtResource("1_pbe4o")

[node name="Shuttlecock" type="CharacterBody2D" parent="."]
position = Vector2(-436, -28)
rotation = 0.174533
disable_mode = 2
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_r2444")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shuttlecock"]
position = Vector2(-264, -122)
polygon = PackedVector2Array(224, 156, 224, 85, 286, 111, 294, 111, 300, 113, 305, 121, 305, 127, 300, 132, 287, 132)
metadata/_edit_lock_ = true

[node name="ShuttlecockImage" type="Sprite2D" parent="Shuttlecock"]
texture = ExtResource("1_ih47p")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-581, -324)
scale = Vector2(29, 1)
physics_material_override = SubResource("PhysicsMaterial_n77np")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Walls/TopWall"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 0
color = Color(0.952941, 0.498039, 0.243137, 1)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(19.9655, 20)
shape = SubResource("RectangleShape2D_4h8rm")
metadata/_edit_lock_ = true

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-580, 286)
scale = Vector2(29, 1)
physics_material_override = SubResource("PhysicsMaterial_cwllb")

[node name="ColorRect" type="ColorRect" parent="Walls/BottomWall"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 0
color = Color(0.952941, 0.498039, 0.243137, 1)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(19.9655, 20)
shape = SubResource("RectangleShape2D_4h8rm")
metadata/_edit_lock_ = true

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(535, -282)
scale = Vector2(1, 14)
physics_material_override = SubResource("PhysicsMaterial_4teu5")

[node name="ColorRect" type="ColorRect" parent="Walls/RightWall"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 0
color = Color(0.952941, 0.498039, 0.243137, 1)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(19.9655, 20)
shape = SubResource("RectangleShape2D_4h8rm")
metadata/_edit_lock_ = true

[node name="PlayerBat" type="CharacterBody2D" parent="."]
position = Vector2(-515, -69)
scale = Vector2(0.760001, 2.68)
script = ExtResource("3_xxkw2")

[node name="ColorRect" type="ColorRect" parent="PlayerBat"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 1, 1)
metadata/_edit_lock_ = true

[node name="PlayerCollisionShape" type="CollisionPolygon2D" parent="PlayerBat"]
position = Vector2(13, 20.3358)
polygon = PackedVector2Array(19.8947, -19.5896, 25.1578, -12.5, 25.1578, -8.76865, 25.1578, -3.17164, 25.1578, -0.559699, 25.1578, 3.91791, 25.1578, 8.39553, 21.2105, 13.6194, 15.9473, 19.2164, -11.6842, 19.2164, -15.6315, -20.3358)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-892, -54)
scale = Vector2(2.48, 7.16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(102.419, 9.63687)
scale = Vector2(1, -19.7315)
shape = SubResource("RectangleShape2D_0j56d")

[node name="Score Label" type="Label" parent="."]
offset_left = 308.0
offset_top = -321.0
offset_right = 360.0
offset_bottom = -298.0
text = "Score :"

[node name="ScoreValue" type="Label" parent="Score Label"]
layout_mode = 0
offset_left = 62.0
offset_right = 102.0
offset_bottom = 23.0
text = "0	"
horizontal_alignment = 2

[connection signal="score" from="Shuttlecock" to="." method="_on_shuttlecock_score"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
